2002-12-22  Paul Swartz  <z3p@twistedmatrix.com>

	* twisted/conch/ssh/keys.py, twisted/conch/ssh/asn1.py: support for 
	writing	public and private keys.

	* bin/ckeygen: new script to create public/private key pairs

2002-12-22  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/protocols/dns.py: Support for AFSDB, RP, and SRV RRs
	added.

2002-12-18  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/persisted/dirdbm.py: copyTo and clear methods added
	to DirDBM class

2002-12-18  Paul Swartz  <z3p@twistedmatrix.com>

	* twisted/conch/ssh/connection.py, twisted/test/test_conch: fixes to
	work on Python 2.1.

	* twisted/internet/process.py: usePTY now can be an optional tuple of
	(masterfd, slavefd, ttyname).

2002-12-18  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/web/rewrite.py: it works now, even when used as a rootish
	resource. Also, the request.path is massaged.

2002-12-13  Dave Peticolas  <dave@krondo.com>

	* twisted/enterprise/util.py: support numeric type

2002-12-13  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/web/client.py: add 301/302 support

2002-12-13  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_ftp.py: give client time to start up (fixes
	one test for gtk/gtk2 reactors)

	* twisted/protocols/ftp.py: ftp client in passive mode should not
	close data until both command and protocol are finished. (fixes
	one test in gtk/gtk2 reactors)

	* twisted/internet/gtkreactor.py: remove redundant code

	* twisted/internet/gtk2reactor.py: remove redundant code

	* twisted/internet/abstract.py: fix spelling in documentation

2002-12-12  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_jelly.py: test class serialization

	* twisted/spread/jelly.py: join module names with '.' in
	_unjelly_class

2002-12-12  Paul Swartz <z3p@twistedmatrix.com>

	* twisted/conch/pamauth.py: added, gives support for authentication
	using PAM.

	* twisted/conch/*: support for the keyboard-interactive authentication
	method which uses PAM.
