@@ -1,3 +1,7 @@
+2002-12-23  Moshe Zadka <moshez@twistedmatrix.com>
+
+	* twisted/web/xmlrpc.py:  added XML RPC client support
+
 2002-12-22  Paul Swartz  <z3p@twistedmatrix.com>
 
 	* twisted/conch/ssh/keys.py, twisted/conch/ssh/asn1.py: support for 
